Primeros cambios en interface

--- a/src/app/components/athlete/athlete.component.html
+++ b/src/app/components/athlete/athlete.component.html
@@ -1,1 +1,12 @@
-<p>athlete works!</p>
+<img
+	src="{{ athlete.profile }}"
+	alt="{{ athlete.firstname }} {{ athlete.lastname }}"
+/>
+<h1>{{ athlete.firstname }} {{ athlete.lastname }}</h1>
+<h2>{{ athlete.bio }}</h2>
+<h3>{{ athlete.city }}, {{ athlete.country }}</h3>
+<h4>@{{ athlete.username }}</h4>
+
+<!-- Candado abierto con el blocked -->
+<!-- Follow con el can follow -->
+<!-- premium con premium -->
