--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,36 @@
-<router-outlet></router-outlet>
+<nz-layout>
+	<nz-sider nzCollapsible [(nzCollapsed)]="isCollapsed" [nzTrigger]="null">
+		<div class="logo"></div>
+		<ul nz-menu nzTheme="dark" nzMode="inline">
+			<li nz-menu-item>
+				<em nz-icon nzType="user"></em>
+				<span>Athlete</span>
+			</li>
+			<!-- <li nz-submenu nzTitle="Team" nzIcon="team">
+				<ul>
+					<li nz-menu-item>Team 1</li>
+					<li nz-menu-item>Team 2</li>
+				</ul>
+			</li> -->
+		</ul>
+	</nz-sider>
+	<nz-layout>
+		<nz-header>
+			<em
+				class="trigger"
+				nz-icon
+				[nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'"
+				(click)="isCollapsed = !isCollapsed"
+			></em>
+		</nz-header>
+		<nz-content>
+			<nz-breadcrumb>
+				<nz-breadcrumb-item>Athlete</nz-breadcrumb-item>
+				<nz-breadcrumb-item>Diego Berges</nz-breadcrumb-item>
+			</nz-breadcrumb>
+			<div class="inner-content"><router-outlet></router-outlet></div>
+		</nz-content>
+		<nz-footer>Ant Design ©2020 Implement By Angular</nz-footer>
+	</nz-layout>
+</nz-layout>
+<!--  -->
