create breadcrumb component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,14 +23,7 @@
 				(click)="isCollapsed = !isCollapsed"
 			></em>
 		</nz-header>
-		<nz-content>
-			<nz-breadcrumb>
-				<nz-breadcrumb-item>Athlete</nz-breadcrumb-item>
-				<nz-breadcrumb-item>Diego Berges</nz-breadcrumb-item>
-			</nz-breadcrumb>
-			<div class="inner-content"><router-outlet></router-outlet></div>
-		</nz-content>
-		<nz-footer>Ant Design ©2020 Implement By Angular</nz-footer>
+		<router-outlet></router-outlet>
+		<nz-footer>Diego Berges ©2021</nz-footer>
 	</nz-layout>
 </nz-layout>
-<!--  -->
