--- a/src/app/components/athlete/athlete.component.html
+++ b/src/app/components/athlete/athlete.component.html
@@ -1,13 +1,14 @@
-<div class="inner-content">
-	<img
-		src="{{ athlete.profile }}"
-		alt="{{ athlete.firstname }} {{ athlete.lastname }}"
-	/>
-	<h1>{{ athlete.firstname }} {{ athlete.lastname }}</h1>
-	<h2>{{ athlete.bio }}</h2>
-	<h3>{{ athlete.city }}, {{ athlete.country }}</h3>
-	<h4>@{{ athlete.username }}</h4>
-</div>
+<nz-content>
+	<ui-breadcrumb [items]="itemsBread"></ui-breadcrumb>
+	<div class="inner-content">
+		<img
+			src="{{ athlete.profile }}"
+			alt="{{ athlete.firstname }} {{ athlete.lastname }}"
+		/>
+		<h2>{{ athlete.bio }}</h2>
+		<h3>{{ athlete.city }}, {{ athlete.country }}</h3>
+	</div>
+</nz-content>
 <!-- Candado abierto con el blocked -->
 <!-- Follow con el can follow -->
 <!-- premium con premium -->
