Previo cambio a clases a interfaces

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,9 @@
 				(click)="isCollapsed = !isCollapsed"
 			></em>
 		</nz-header>
-		<router-outlet></router-outlet>
+		<nz-content>
+			<router-outlet></router-outlet>
+		</nz-content>
 		<nz-footer>Diego Berges ©2021</nz-footer>
 	</nz-layout>
 </nz-layout>
