--- a/src/app/components/athlete/athlete.component.html
+++ b/src/app/components/athlete/athlete.component.html
@@ -1,19 +1,16 @@
 <ui-breadcrumb [items]="itemsBread"></ui-breadcrumb>
 <div class="inner-content">
-	<img
-		src="{{ athlete.profile }}"
-		alt="{{ athlete.firstname }} {{ athlete.lastname }}"
-	/>
-	<p>{{ athlete.bio }}</p>
-	<p>{{ athlete.city }}, {{ athlete.country }}</p>
+	<div nz-row>
+		<div>
+			<nz-collapse nzAccordion>
+				<nz-collapse-panel *ngFor="let panel of panels" [nzHeader]="panel.name">
+					<!-- [nzActive]="panel.active" -->
 
-	<nz-collapse nzAccordion>
-		<nz-collapse-panel *ngFor="let panel of panels" [nzHeader]="panel.name">
-			<!-- [nzActive]="panel.active" -->
-
-			<ui-table [items]="panel.content"></ui-table>
-		</nz-collapse-panel>
-	</nz-collapse>
+					<ui-grid [items]="panel.content"></ui-grid>
+				</nz-collapse-panel>
+			</nz-collapse>
+		</div>
+	</div>
 </div>
 <!-- Candado abierto con el blocked -->
 <!-- Follow con el can follow -->
