Creacion de todas las interfaces de strava

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,10 +10,15 @@
 	color: #1890ff;
 }
 
-.logo {
-	height: 32px;
-	background: rgba(255, 255, 255, 0.2);
-	margin: 16px;
+// .logo {
+// 	height: 32px;
+// 	background: rgba(255, 255, 255, 0.2);
+// 	margin: 16px;
+// }
+
+img {
+	height: 50px;
+	margin: 16px 16px 10px 16px;
 }
 
 nz-header {
