--- a/src/app/components/athlete/athlete.component.html
+++ b/src/app/components/athlete/athlete.component.html
@@ -1,16 +1,16 @@
 <ui-breadcrumb [items]="itemsBread"></ui-breadcrumb>
 <div class="inner-content">
-	<div nz-row>
-		<div>
-			<nz-collapse nzAccordion>
-				<nz-collapse-panel *ngFor="let panel of panels" [nzHeader]="panel.name">
-					<!-- [nzActive]="panel.active" -->
+	<app-stats-component [statics]="statics"></app-stats-component>
 
-					<ui-grid [items]="panel.content"></ui-grid>
-				</nz-collapse-panel>
-			</nz-collapse>
-		</div>
-	</div>
+	<!-- <div> -->
+	<!-- <nz-collapse nzAccordion> -->
+	<!-- <nz-collapse-panel *ngFor="let panel of panels" [nzHeader]="panel.name"> -->
+	<!-- [nzActive]="panel.active" -->
+
+	<!-- <ui-grid [items]="panel.content"></ui-grid> -->
+	<!-- </nz-collapse-panel> -->
+	<!-- </nz-collapse> -->
+	<!-- </div> -->
 </div>
 <!-- Candado abierto con el blocked -->
 <!-- Follow con el can follow -->
