Creados test no implementados en un principio

--- a/src/app/components/athlete/athlete.component.html
+++ b/src/app/components/athlete/athlete.component.html
@@ -1,6 +1,6 @@
 <ui-breadcrumb [items]="itemsBread"></ui-breadcrumb>
 <div class="inner-content">
-	<app-stats-component [statics]="statics"></app-stats-component>
+	<!-- <app-stats-component [statics]="statics"></app-stats-component> -->
 
 	<!-- <div> -->
 	<!-- <nz-collapse nzAccordion> -->
