fix min height layout

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,12 +10,6 @@
 	color: #1890ff;
 }
 
-// .logo {
-// 	height: 32px;
-// 	background: rgba(255, 255, 255, 0.2);
-// 	margin: 16px;
-// }
-
 img {
 	height: 50px;
 	margin: 16px 16px 10px 16px;
@@ -32,4 +26,8 @@ nz-content {
 
 nz-footer {
 	text-align: center;
+}
+
+nz-layout {
+	min-height: 100vh;
 }
