delete zorro references

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nz-layout>
+<!-- <nz-layout>
   <nz-sider nzCollapsible [(nzCollapsed)]="isCollapsed" [nzTrigger]="null">
     <div class="logo">
       <img
@@ -10,14 +10,14 @@
       <li nz-menu-item>
         <em nz-icon nzType="user"></em>
         <span>{{ 'MENU.PROFILE' | translate }}</span>
-      </li>
+      </li> -->
       <!-- <li nz-submenu nzTitle="{{ 'MENU.SPORTS' | translate }}" nzIcon="team">
 				<ul>
 					<li nz-menu-item>{{ 'SPORTS.RUNNING' | translate }}</li>
 					<li nz-menu-item>{{ 'SPORTS.BIKE' | translate }}</li>
 				</ul>
 			</li> -->
-    </ul>
+    <!-- </ul>
   </nz-sider>
   <nz-layout>
     <nz-header>
@@ -33,4 +33,4 @@
     </nz-content>
     <nz-footer>Diego Berges ©2021</nz-footer>
   </nz-layout>
-</nz-layout>
+</nz-layout> -->
