--- a/src/app/components/athlete/athlete.component.html
+++ b/src/app/components/athlete/athlete.component.html
@@ -1,7 +1,7 @@
-<app-ui-breadcrumb [items]="itemsBread"></app-ui-breadcrumb>
-<div class="inner-content">
+<!-- <app-ui-breadcrumb [items]="itemsBread"></app-ui-breadcrumb>
+<div class="inner-content"> -->
   <!-- Actividades -->
-  <nz-table #actividades [nzData]="activities">
+  <!-- <nz-table #actividades [nzData]="activities">
     <thead>
       <tr>
         <th id="Fecha">Fecha</th>
@@ -32,7 +32,7 @@
         <td>{{ actividad.max_heartrate | number: '1.0-0' }}</td>
       </tr>
     </tbody>
-  </nz-table>
+  </nz-table> -->
   <!-- <app-stats-component [statics]="statics"></app-stats-component> -->
 
   <!-- <div> -->
@@ -44,7 +44,7 @@
   <!-- </nz-collapse-panel> -->
   <!-- </nz-collapse> -->
   <!-- </div> -->
-</div>
+<!-- </div> -->
 <!-- Candado abierto con el blocked -->
 <!-- Follow con el can follow -->
 <!-- premium con premium -->
