--- a/src/app/components/ui/grid/grid.component.html
+++ b/src/app/components/ui/grid/grid.component.html
@@ -1,4 +1,4 @@
-<nz-table [nzData]="items" nzSize="small">
+<!-- <nz-table [nzData]="items" nzSize="small">
   <thead>
     <tr>
       <th *ngFor="let colum of columns" id="colum">{{ colum }}</th>
@@ -50,4 +50,4 @@
       <td>{{ item.primary }}</td>
     </tr>
   </tbody>
-</nz-table>
+</nz-table> -->
