--- a/src/app/components/ui/stat-component/stat-component.component.html
+++ b/src/app/components/ui/stat-component/stat-component.component.html
@@ -1,4 +1,4 @@
-<div nz-row [nzGutter]="16" [hidden]="stat !== undefined && stat.count === 0">
+<!-- <div nz-row [nzGutter]="16" [hidden]="stat !== undefined && stat.count === 0">
   <nz-col [nzSpan]="4">
     <nz-statistic
       [nzValue]="stat.count!"
@@ -29,4 +29,4 @@
       [nzTitle]="'Tiempo en Movimiento'"
     ></nz-statistic
   ></nz-col>
-</div>
+</div> -->
