--- a/src/app/components/ui/breadcrumb/breadcrumb.component.html
+++ b/src/app/components/ui/breadcrumb/breadcrumb.component.html
@@ -1,3 +1,3 @@
-<nz-breadcrumb>
+<!-- <nz-breadcrumb>
   <nz-breadcrumb-item *ngFor="let item of items">{{ item }}</nz-breadcrumb-item>
-</nz-breadcrumb>
+</nz-breadcrumb> -->
